--- a/newhorizons/template/testimonials/list.html
+++ b/newhorizons/template/testimonials/list.html
@@ -19,8 +19,8 @@
             </div>
             
             <div class="footer">
-                {% if item.author %}
-                    {{ item.author|safe }}
+                {% if item.created_by %}
+                    {{ item.created_by|safe }}
                 {% endif %}
             </div>
             <div class="clearfix"></div>
