--- a/newhorizons/static/newhorizons/stylesheets/styles.scss
+++ b/newhorizons/static/newhorizons/stylesheets/styles.scss
@@ -21,13 +21,16 @@ $dark-blue: #202f5f;
 $background: $white;
 $nav: $gold;
 $text: $dark-blue;
-$la-color: #1a92cf;
+$la-color: #ac47a3;
 $la-color-dark: #4486aa;
 $la-color-light: #daedfe;
-$tp-color: #48834c;
+$ac-color: #009476;
+$ac-color-dark: #009476;
+$ac-color-light: #009476;
+$tp-color: #95b638;
 $tp-color-dark: #59885c;
 $tp-color-light: #ecfee5;
-$cc-color: #b66685;
+$cc-color: #568bc3;
 $cc-color-dark: #905e6f;
 $cc-color-light: #e8d9de;
 $header: $medium-blue;
@@ -699,6 +702,18 @@ img.icon {
 	}
 	.content {
 	    border: 1px solid $la-color;
+	}
+    }
+    #ac {
+	.header {
+	    background-color: $ac-color;
+	    border: 1px solid $ac-color;
+	}
+	.content, .footer {
+	    color: $ac-color;
+	}
+	.content {
+	    border: 1px solid $ac-color;
 	}
     }
     #tp {
