--- a/newhorizons/template/locations/details.html
+++ b/newhorizons/template/locations/details.html
@@ -1,7 +1,5 @@
-
 {% load i18n %}
-
-<div class="description">{{ location.description|safe }}</div>
+<!--<div class="description">{{ location.description|safe }}</div>-->
 {% if location.meta.picture %}
     <div class="image"><img src="{{ MEDIA_URL }}{{ location.meta.picture }}" /></div>
 {% elif location.picture %}
@@ -12,4 +10,6 @@
 {% elif location.file %}
     <div class="link">{% trans 'For a printable version of our map and bilingual driving directions' %}, <a target="_blank" href="{{ location.file.url }}">{% trans 'click here' %}</a>.</div>
 {% endif %}
+<script>loadMaps();</script>
+<div id="map-canvas" style="width:100%;height:320px;"></div>
 <div class="directions">{{ location.directions|safe }}</div>
