--- a/newhorizons/template/testimonials/panel_list.html
+++ b/newhorizons/template/testimonials/panel_list.html
@@ -18,8 +18,8 @@
             </div>
             <div class="clearfix"></div>
             <div class="footer">
-                {% if item.author %}
-                    {{ item.author|safe }}
+                {% if item.created_by %}
+                    {{ item.created_by|safe }}
                 {% endif %}
             </div>
         </div></li>
