--- a/newhorizons/template/instructors/details.html
+++ b/newhorizons/template/instructors/details.html
@@ -13,7 +13,7 @@
                         <div style="width:120px"></div>
                     {% endif %}
                 </td><td valign="top" class="center">
-                    <h2 class="person_name"><span>{{ instructor.last_name }}</span> <span>{{ instructor.first_name }}</span></h2>
+                    <h2 class="person_name"><span>{{ instructor.first_name }}</span> <span>{{ instructor.last_name }}</span></h2>
                     <div class="description">
                             {{ instructor.description|safe }}
                     </div>
