--- a/newhorizons/template/courses/class_list.html
+++ b/newhorizons/template/courses/class_list.html
@@ -6,7 +6,7 @@
 <div class="page_category_list">
     {% for item in sub_nav %}
         {% ifequal item.pk|stringformat:"s" target|stringformat:"s" %}
-            <span class="current">{{ item.shortname }}</span>
+            <span class="current">{{ item }}</span>
         {% else %}   
             <a href="#" onclick="$(' {{ panel }} ').load( '{{ url }}?target={{ item.pk }}' ); return false;" >{{ item.shortname }}</a>
         {% endifequal %}
@@ -16,10 +16,10 @@
 <div class="content">
     {% for item in class_list %}
         <div class="item">
-            <div class="title">{{ item.course.name|truncatechars:16 }}</div>
+            <div class="title">{% if item.schedule %}<a target="_blank" href="{{ item.schedule.url }}">{{ item.course.name }}(PDF)</a>{% else %}{{ item.course.name }}{% endif %}</div>
             <div class="time">{{ item.start_time|date:"M d" }}-{{ item.end_time|date:"M d" }}</div>
-            <div class="file">{% if item.schedule %}<a target="_blank" href="{{ item.schedule.url }}">PDF</a>{% endif %}</div>
-            <div class="location">{{ item.location.all|join:", " }}</div>
+            <!--<div class="file">{% if item.schedule %}<a target="_blank" href="{{ item.schedule.url }}">PDF</a>{% endif %}</div>-->
+            <div class="location last-child">{{ item.location.all|join:", " }}</div>
         </div>
     {% empty %}
         <div class="message">{{ none_message|safe }}</div>
